[Makefile] write source files instaead of *

--- a/philo/Makefile
+++ b/philo/Makefile
@@ -3,10 +3,10 @@
 #                                                         :::      ::::::::    #
 #    Makefile                                           :+:      :+:    :+:    #
 #                                                     +:+ +:+         +:+      #
-#    By: toshota <toshota@student.42.fr>            +#+  +:+       +#+         #
+#    By: toshota <toshota@student.42tokyo.jp>       +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2024/01/15 13:39:44 by toshota           #+#    #+#              #
-#    Updated: 2024/01/20 13:40:16 by toshota          ###   ########.fr        #
+#    Updated: 2024/01/20 14:03:22 by toshota          ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -18,9 +18,10 @@ INC			=	-I inc/ -I srcs/
 SRCS_DIR	=	srcs/
 OBJS_DIR	=	objs/
 
-SRCS		=	$(wildcard srcs/*.c)
-SRCS		+=	$(wildcard srcs/*/*.c)
-SRCS		+=	$(wildcard srcs/*/*/*.c)
+SRCS		=	srcs/main.c srcs/do_philo/do_philo.c srcs/do_philo/do_something.c srcs/do_philo/sleep_until_all_threads_are_created.c srcs/do_philo/take_a_fork.c srcs/end_philo/destroy_all_mutex.c srcs/end_philo/end_philo.c srcs/end_philo/is_end.c srcs/get_philo/get_philo.c srcs/get_philo/init_all_mutex.c srcs/get_philo/init_philo.c srcs/is_arg_valid/is_arg_valid.c srcs/utils/check.c srcs/utils/put_msg.c srcs/utils/time.c srcs/utils/ft_func/ft_atoi.c srcs/utils/ft_func/ft_isdigit.c srcs/utils/ft_func/ft_putstr_fd.c srcs/utils/ft_func/ft_strcmp.c srcs/utils/ft_func/ft_strlen.c
+# SRCS		=	$(wildcard srcs/*.c)
+# SRCS		+=	$(wildcard srcs/*/*.c)
+# SRCS		+=	$(wildcard srcs/*/*/*.c)
 
 OBJS		=	$(patsubst $(SRCS_DIR)%.c, $(OBJS_DIR)%.o, $(SRCS))
 
