--- a/philo/Makefile
+++ b/philo/Makefile
@@ -3,17 +3,17 @@
 #                                                         :::      ::::::::    #
 #    Makefile                                           :+:      :+:    :+:    #
 #                                                     +:+ +:+         +:+      #
-#    By: toshota <toshota@student.42tokyo.jp>       +#+  +:+       +#+         #
+#    By: toshota <toshota@student.42.fr>            +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2024/01/15 13:39:44 by toshota           #+#    #+#              #
-#    Updated: 2024/01/20 14:08:45 by toshota          ###   ########.fr        #
+#    Updated: 2024/01/20 15:13:14 by toshota          ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
 NAME		=	philo
 CC			=	cc
 CFLAGS		=	-Wall -Wextra -Werror
-# CFLAGS		+=	-g -fsanitize=thread
+CFLAGS		+=	-g -fsanitize=thread
 RM			=	rm -rf
 INC			=	-I inc/ -I srcs/
 SRCS_DIR	=	srcs/
